# saas202511

./: .env.example  .gitattributes  .prettierignore  .prettierrc  .project-state.json  .project-workflow.json  AGENTS.md  AGENTS.md.backup-20251105  AZURE-PROJECT-CODE.txt  BUILT-IN-VS-INSTALLABLE.md  CLAUDE.md  Dockerfile.node  Dockerfile.python  LINEAR-GITHUB-INTEGRATION.md  Makefile  SETUP-CHECKLIST.md  STATUS.md  _START-HERE.md  docker-compose.yml  eslint.config.js  project-brief.md  pyproject.toml  tsconfig.json
.config/: INTEGRATIONS.md  clickup-config.json  clickup-integration-guide.md  linear-integration-guide.md
.github/workflows/: ci.yml  deploy-production.yml  deploy-staging.yml
business/okrs/: 2025-2026-annual-okrs.md
docs/: QUICK-START.md  TEMPLATES-INVENTORY.md  setup-completion-summary.md
docs/advanced/: SPECIALIZED-TOOLS.md
docs/progress/: SESSION-2025-11-02.md
docs/reporting/: GAP-ANALYSIS.md  README.md  REPORTING-INVENTORY.md
product/roadmap/: 2025-2026-fms-roadmap.md
scripts/: README.md  backup-db-azure.sh  migrate-db-azure.sh  setup-azure-resources.sh
sprints/current/: sprint-01-beachhead-foundation.md  sprint-02-interop-core.md  sprint-03-compliance-audit.md  sprint-04-inventory-costing.md  sprint-05-field-to-finance.md  sprint-06-mission-planner-sre.md
technical/: multi-tenant-architecture.md
technical/infrastructure/: AZURE-DEPLOYMENT-GUIDE.md  CI-CD-SETUP.md  DATABASE-MIGRATION.md  ENVIRONMENT-STRATEGY.md  README.md  SECRETS-MANAGEMENT.md
technical/infrastructure/azure/: main.bicep  parameters.production.json  parameters.staging.json
workflows/: DAILY-PRACTICES.md
